# KestrelPack

./: .gitignore  CMakeLists.txt  Doxyfile  Jenkinsfile  KestrelPackConfig.cmake  README.md  default.profraw  sonar-project.properties
include/: Decoder.hpp  Encoder.hpp  FrequencyModel.hpp  KestrelPack.hpp
source/: Decoder.cpp  Encoder.cpp  FrequencyModel.cpp  KestrelPack.cpp
tests/: CMakeLists.txt  test_Encoder.cpp  test_FrequencyModel.cpp
